--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,11 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Portfólio profissional de SEU NOME, desenvolvido em Flutter Web.">
+  <meta name="keywords" content="Flutter, Portfólio, Desenvolvedor Mobile, Flutter Web">
+  <meta name="author" content="Hisnaider Ribeiro Campello">
+  <meta name="copyright" content="© 2025 Hisnaider Ribeiro Campello">
+  <meta name="license" content="Creative Commons BY-NC-ND 4.0">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -29,9 +33,9 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <title>portfolio</title>
   <link rel="manifest" href="manifest.json">
