fix: Update meta description in index.html to reflect the correct author name

--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Portfólio profissional de SEU NOME, desenvolvido em Flutter Web.">
+  <meta name="description" content="Portfólio profissional de Hisnaider Ribeiro Campello, desenvolvido em Flutter Web.">
   <meta name="keywords" content="Flutter, Portfólio, Desenvolvedor Mobile, Flutter Web">
   <meta name="author" content="Hisnaider Ribeiro Campello">
   <meta name="copyright" content="© 2025 Hisnaider Ribeiro Campello">
